@@ -1,3 +1,6 @@
+- edit-urpm-sources:
+  o fix displayling big list of media to remove (#46773)
+
 Version 5.5 - 9 December 2008, Thierry Vignaud
 
 - rpmdrake:
